<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingLeft="15dip"
    android:paddingRight="15dip"
    android:paddingTop="20dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dip"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/bg_round_rect_line"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/search_code_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:hint="@string/search_code_hint"
            android:imeOptions="actionDone"
            android:inputType="number|text"
            android:text="" />

        <RadioGroup
            android:id="@+id/search_radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/search_SNOMED_CT_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_SNOMED_CT"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/search_hint_SNOMED_CT"
                android:layout_marginLeft="50dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_hint_SNOMED_CT"/>"

            <RadioButton
                android:id="@+id/search_ICD_9_CM_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_ICD_9_CM"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray" />
            
            <TextView
                android:id="@+id/search_hint_ICD_9_CM"
                android:layout_marginLeft="50dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_hint_ICD_9_CM"/>
            
            <RadioButton
                android:id="@+id/search_RXCUI_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_RXCUI"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray" />
            <TextView
                android:id="@+id/search_hint_RXCUI"
                android:layout_marginLeft="50dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_hint_RXCUI"/>
            
            <RadioButton
                android:id="@+id/search_NDC_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_NDC"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray" />
            
            <TextView
                android:id="@+id/search_hint_NDC"
                android:layout_marginLeft="50dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_hint_NDC"/>
            
            <RadioButton
                android:id="@+id/search_LOINC_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_LOINC"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray" />
            
            <TextView
                android:id="@+id/search_hint_LOINC"
                android:layout_marginLeft="50dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_hint_LOINC"/>
            
        </RadioGroup>

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
             android:layout_marginBottom="10dip"
            android:text="@string/submit" />
    </LinearLayout>

</ScrollView>